--- a/src/index.css
+++ b/src/index.css
@@ -262,3 +262,26 @@ body{
   overflow: none;
   height: 100vh;
 }
+/*styling Accessories now*/
+.Accessories_body{
+  background: url("./img/Acessories.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  overflow: none;
+  height: 100vh;
+}
+.shop-now{
+  width: 16rem;
+  height: 2.5rem;
+  border-radius: 2rem;
+  font-size: 12px;
+  color: #fff;
+  background: #222;
+  outline:none;
+  border:none;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-right: 2rem;
+}
