--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,6 @@ body{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
   padding: 1rem 3rem;
 }
 .first-flex > span{
@@ -284,4 +283,24 @@ body{
   font-weight: 600;
   text-transform: uppercase;
   margin-right: 2rem;
+}
+.footer-flex{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+.inner-footer > div{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top:2.5rem;
+}
+.inner-footer > div > a{
+  text-decoration: none;
+  color: #424242;
 }
