--- a/src/index.css
+++ b/src/index.css
@@ -169,6 +169,9 @@ body{
   height: 2rem;
   transition:all .5s ease-in-out;
 }
+.menu-btn{
+  display: none;
+}
 /*styling model Y now*/
 .model-Y_body{
   background: url("./img/ModelY.jpg");
@@ -284,23 +287,29 @@ body{
   text-transform: uppercase;
   margin-right: 2rem;
 }
+footer{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 .footer-flex{
-  width: 50%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 
 }
-.inner-footer > div{
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+.footer-flex >div{
   margin-top:2.5rem;
 }
-.inner-footer > div > a{
+.footer-flex > div > a{
   text-decoration: none;
   color: #424242;
+  padding-right: 2rem;
+}
+.mobile-flex{
+  display:none;
 }
