--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,7 +1,57 @@
 @media only screen and (max-width:600px) {
-    nav{
-        display:none;
+    .items-flex{
+        display: none;
     }
+    .others-flex{
+        display: none;
+    }
+    .menu-btn{
+        display: inline-block;
+    }
+    .mobile-flex{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width:50%;
+        height:100vh;
+        background: #424242;
+        transition: 1s all ease-in-out;
+        z-index: 999;
+    }
+    .mobile-flex > a{
+        color: #f2f2f2;
+        padding-top: 2rem;
+        text-decoration: none;
+    }
+    .mobile-flex > button {
+        position: fixed;
+        top:1rem;
+        right:1rem;
+        color: #f2f2f2;
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        z-index: 999;
+    }
+    .menu-btn > button {
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        z-index: 999;
+    }
+    .menu-btn > button > i{
+        font-size: 2rem;
+        z-index: 999;
+    }
+    .main-flex{
+        padding: 1rem 1.5rem;
+      }
     .button-flex{
         display: flex;
         justify-content: center;
@@ -44,27 +94,33 @@
         width: 90%;
         margin-right: 0;
       }
+
       footer{
-          display:none;
-          
-      }
-      /* .footer-flex{
         width: 100%;
+        margin-top:1.5rem;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
       }
-      .inner-footer{
-        width:100%;
-        text-align: center;
-        margin:1.5rem 1rem;
-
-      }
-      .inner-footer > a{
-        text-decoration: none;
+      .footer-flex{
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      
+      }
+      .footer-flex >div{
+        width:100%;
+        margin-top:1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .footer-flex > div > a{
+        text-decoration: none;
         color: #424242;
-       
-      } */
+        padding-right: 1rem;
+      } 
 } 
